# Emerald

./: Emerald.cabal  GLFW.cabal  LICENSE  README.md  README.txt  Setup.hs
C/: emerald.h  internal.h
C/Mac/: init.m  platform.h
C/Win/: platform.h  window.c
Graphics/UI/: GLFW.hs
Haskell/Graphics/UI/: Emerald.hs
example/: example.lhs
glfw/lib/x11/: x11_init.c
